# lemin_viz

./: CMakeLists.txt  Makefile  Makefile 2  README.md  blur_v2.c  blur_v4.c  brezenham.c  clear.c  dikk_map  draw_ants.c  draw_buff.c  draw_circle.c  draw_filled_circle.c  draw_map.c  drawing_tests_delete_me.c  duplicate_values.c  general_drawing.c  init_sdl.c  lem_viz.h  loopz.c  main.c  map_42  modify_levels.c  music.c  prepare_data.c  pulse_map.c  r.txt  read_ants.c  read_links.c  read_links_helper.c  read_output.c  read_rooms.c  read_steps.c  read_steps_helper.c  set_levels_for_view.c  square_map.txt  square_res.txt  staraya_rus.h  test.txt  test_big.txt  (+5 more)
SDL2(win)/: blur_v4.c
includes/: lem_viz.h
src/: blur_v4.c  brezenham.c  clear.c  clear_data.c  delete_unused.c  draw_ants.c  draw_ants_helper.c  draw_ants_steps.c  draw_buff.c  draw_buff_2.c  draw_circle.c  draw_filled_circle.c  draw_gaem_elements.c  draw_map.c  draw_roomz.c  draw_texture.c  drawing_tests_delete_me.c  error_manager.c  gaem_time.c  general_drawing.c  init_sdl.c  loop.c  loop_game_mode.c  loopz.c  main.c  music.c  prepare_data.c  read_ants.c  read_links.c  read_links_helper.c  read_rooms.c  read_steps.c  read_steps_helper.c  set_levels_for_view.c  utils.c  utils_check.c  zoom.c
